--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,7 @@ add_compile_options(-std=c++1y)
 add_subdirectory("3rd/pugixml")
 add_subdirectory("3rd/mlTime")
 add_subdirectory("3rd/mlPath")
+add_subdirectory("3rd/mlLog")
+add_subdirectory("3rd/mlCmd")
 
 add_subdirectory("Code/Goblin")
